modify to enter scene